--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,15 +1,15 @@
 .profile {
     width: 300px;
-    background-color: #f3f6f9;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
     margin: 0 auto;
-    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    overflow: hidden;
 }
 
 .description {
-    padding: 20px;
+    padding: 30px;
 }
 
 .avatar {
@@ -19,41 +19,34 @@
 }
 
 .name {
-    font-size: 22px;
+    font-size: 24px;
     font-weight: bold;
-    margin: 10px 0;
 }
 
 .tag,
 .location {
-    color: gray;
-    margin: 5px 0;
+    font-size: 16px;
+    color: #999;
 }
 
 .stats {
-    list-style: none;
     display: flex;
-    justify-content: space-between;
-    padding: 0;
-    margin: 20px 0 0;
-    border-top: 1px solid #e4e9f0;
+    justify-content: space-around;
+    background-color: #f3f6f9;
 }
 
 .stats li {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    flex-basis: calc(100% / 3);
+    padding: 20px;
+    flex-basis: 33.3333%;
 }
 
 .label {
-    color: gray;
+    display: block;
     font-size: 14px;
+    color: #999;
 }
 
 .quantity {
-    font-weight: bold;
-    margin-top: 5px;
     font-size: 18px;
+    font-weight: bold;
 }
